# fireREST

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  Pipfile  README.md  __init__.py  api-test-policy.csv  export-acp-to-csv.py  fireREST.py  firepower.py  gen_docstrings.py  mkdocs.yml  pyproject.toml  requirements.txt  schema.py  setup.cfg  setup.py  tox.ini  update-all-rules.py
.claude/commands/: firerest.md
docs/: conf.py  gen_ref_pages.py  index.md  index.rst
docs/reference/: analysis.md  assignment.md  audit.md  backup.md  changemanagement.md  chassis.md  deployment.md  device.md  devicecluster.md  devicegroup.md  devicehapair.md  fmc.md  health.md  integration.md  intelligence.md  job.md  license.md  netmap.md  object.md  policy.md  system.md  systemconfiguration.md  troubleshoot.md  update.md  user.md
docs/source/: fireREST.fmc.object.network.rst  fireREST.fmc.object.rst  fireREST.fmc.policy.accesspolicy.rst  fireREST.fmc.policy.rst  fireREST.fmc.rst  modules.rst
docs/src/: fireREST.fmc.assignment.policyassignment.rst  fireREST.fmc.assignment.rst  fireREST.fmc.audit.auditrecord.rst  fireREST.fmc.audit.rst  fireREST.fmc.chassis.interface.rst  fireREST.fmc.chassis.networkmodule.rst  fireREST.fmc.chassis.operational.rst  fireREST.fmc.chassis.rst  fireREST.fmc.deployment.deployabledevice.deployment.rst  fireREST.fmc.deployment.deployabledevice.pendingchanges.rst  fireREST.fmc.deployment.deployabledevice.rst  fireREST.fmc.deployment.deploymentrequest.rst  fireREST.fmc.deployment.jobhistory.rst  fireREST.fmc.deployment.rollbackrequest.rst  fireREST.fmc.deployment.rst  fireREST.fmc.device.devicerecord.bridgegroupinterface.rst  fireREST.fmc.device.devicerecord.etherchannelinterface.rst  fireREST.fmc.device.devicerecord.fpinterfacestatistics.rst  fireREST.fmc.device.devicerecord.fplogicalinterface.rst  fireREST.fmc.device.devicerecord.fpphysicalinterface.rst  fireREST.fmc.device.devicerecord.inlineset.rst  fireREST.fmc.device.devicerecord.interfaceevent.rst  fireREST.fmc.device.devicerecord.operational.command.rst  fireREST.fmc.device.devicerecord.operational.metric.rst  fireREST.fmc.device.devicerecord.operational.rst  fireREST.fmc.device.devicerecord.physicalinterface.rst  fireREST.fmc.device.devicerecord.redundantinterface.rst  fireREST.fmc.device.devicerecord.routing.bgp.rst  fireREST.fmc.device.devicerecord.routing.bgpgeneralsettings.rst  fireREST.fmc.device.devicerecord.routing.ipv4staticroute.rst  fireREST.fmc.device.devicerecord.routing.ipv6staticroute.rst  fireREST.fmc.device.devicerecord.routing.ospfinterface.rst  fireREST.fmc.device.devicerecord.routing.ospfv2route.rst  fireREST.fmc.device.devicerecord.routing.ospfv3interface.rst  fireREST.fmc.device.devicerecord.routing.policybasedroute.rst  fireREST.fmc.device.devicerecord.routing.rst  fireREST.fmc.device.devicerecord.routing.staticroute.rst  fireREST.fmc.device.devicerecord.routing.virtualrouter.bgp.rst  fireREST.fmc.device.devicerecord.routing.virtualrouter.ipv4staticroute.rst  fireREST.fmc.device.devicerecord.routing.virtualrouter.ipv6staticroute.rst  (+208 more)
fireREST/: __init__.py  decorators.py  defaults.py  exceptions.py  mapping.py  utils.py  version.py
fireREST/fmc/: __init__.py
fireREST/fmc/analysis/: __init__.py
fireREST/fmc/analysis/activesessions/: __init__.py
fireREST/fmc/analysis/useractivity/: __init__.py
fireREST/fmc/assignment/: __init__.py
fireREST/fmc/assignment/policyassignment/: __init__.py
fireREST/fmc/audit/: __init__.py
fireREST/fmc/audit/auditrecord/: __init__.py
fireREST/fmc/audit/configchanges/: __init__.py
fireREST/fmc/backup/: __init__.py
fireREST/fmc/backup/downloadbackup/: __init__.py
fireREST/fmc/backup/file/: __init__.py
fireREST/fmc/changemanagement/: __init__.py
fireREST/fmc/changemanagement/ticket/: __init__.py
fireREST/fmc/chassis/: __init__.py
fireREST/fmc/chassis/appinfo/: __init__.py
fireREST/fmc/chassis/chassisetherchannelinterface/: __init__.py
fireREST/fmc/chassis/chassisinterface/: __init__.py
fireREST/fmc/chassis/chassisinterfaceevent/: __init__.py
fireREST/fmc/chassis/chassissnmpsettings/: __init__.py
fireREST/fmc/chassis/chassissubinterface/: __init__.py
fireREST/fmc/chassis/faultsummary/: __init__.py
fireREST/fmc/chassis/instancesummary/: __init__.py
fireREST/fmc/chassis/interface/: __init__.py
fireREST/fmc/chassis/interfacesummary/: __init__.py
fireREST/fmc/chassis/inventorysummary/: __init__.py
fireREST/fmc/chassis/logicaldevice/: __init__.py
fireREST/fmc/chassis/networkmodule/: __init__.py
fireREST/fmc/chassis/operational/: __init__.py
fireREST/fmc/chassis/physicalinterface/: __init__.py
fireREST/fmc/deployment/: __init__.py
fireREST/fmc/deployment/deployabledevice/: __init__.py
fireREST/fmc/deployment/deploymentrequest/: __init__.py
fireREST/fmc/deployment/jobhistory/: __init__.py
fireREST/fmc/deployment/pendingchangesrequest/: __init__.py
fireREST/fmc/deployment/rollbackrequest/: __init__.py
fireREST/fmc/device/: __init__.py
fireREST/fmc/device/devicerecord/: __init__.py
fireREST/fmc/devicecluster/: __init__.py
fireREST/fmc/devicegroup/: __init__.py
fireREST/fmc/devicehapair/: __init__.py
fireREST/fmc/health/: __init__.py
fireREST/fmc/integration/: __init__.py
fireREST/fmc/intelligence/: __init__.py
fireREST/fmc/job/: __init__.py
fireREST/fmc/license/: __init__.py
fireREST/fmc/netmap/: __init__.py
fireREST/fmc/object/: __init__.py
fireREST/fmc/policy/: __init__.py
fireREST/fmc/system/: __init__.py
fireREST/fmc/systemconfiguration/: __init__.py
fireREST/fmc/troubleshoot/: __init__.py
fireREST/fmc/update/: __init__.py
fireREST/fmc/user/: __init__.py
test/: conftest.py  test_fireREST.py  test_utils.py
test/auth/: test_auth.py
test/firerest/: test_deployment.py
test/fmc/: test_connection.py  test_fmc.py  test_resource.py
test/fmc/devicerecord/: test_devicerecord.py
test/fmc/policy/: test_policy.py
test/fmc_cdo/: test_cdo_connection.py
test/helper/: test_helper.py
test/utils/: test_utils.py
(+323 files in other folders)
