[project]
name = "fireREST"
version = "1.3.0"
description = "Python API client for Cisco Firepower Management Center (FMC)"
keywords = ["cisco", "firepower", "fmc", "ftd", "fpr", "api", "rest", "firewall"]
authors = [
    { name = "Oliver Kaiser", email = "oliver.kaiser@outlook.com" }
]
maintainers = [
    { name = "Rafal Chrabaszcz", email = "rchrabas@cisco.com" },
    { name = "Christian Mendez", email = "cristianr.mendezm@gmail.com" }
]
license = { text = "GPL-3.0-only" }
readme = {file = "README.md", content-type = "text/markdown"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: System :: Networking :: Firewalls",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

requires-python = ">=3.9"
dependencies = [
    "packaging>=20.3",
    "requests>=2.32.4",
    "retry>=0.9.2",
    "simplejson>=3.17.2",
    "urllib3>=2.6.0"
]

[project.urls]
Repository = "https://github.com/kaisero/fireREST"
"Bug Tracker" = "https://github.com/kaisero/fireREST/issues"
Changelog = "https://github.com/kaisero/fireREST/blob/master/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["fireREST*"]

[tool.poetry]
requires-poetry = ">=2.0"
packages = [
    { include = "fireREST" }
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4"
pytest = "^8"
pytest-cov = "^6"
pytest-runner = "^6"
mkdocs = "^1.6"
mkdocs-material = "^9"
mkdocstrings = {version = "^0.27", extras = ["python"]}
mypy = ">=1"
jinja2 = ">=3.1.6"
build = ">=1.2"
twine = ">=6.0"

[build-system]
requires = ["setuptools >= 75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
exclude = ['.venv', '.git', 'docs']
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
addopts = "--verbose"
filterwarnings = "ignore::urllib3.exceptions.InsecureRequestWarning"
