[project]
name = "fireREST"
version = "1.3.0"
description = "Python API client for Cisco Firepower Management Center (FMC)"
keywords = ["cisco", "firepower", "fmc", "ftd", "fpr", "api", "rest", "firewall"]
authors = [
    { name = "Oliver Kaiser", email = "oliver.kaiser@outlook.com" }
]
maintainers = [
    { name = "Rafal Chrabaszcz", email = "rchrabas@cisco.com" },
    { name = "Christian Mendez", email = "cristianr.mendezm@gmail.com" }
]
license = "GPL-3.0-or-later"
readme = {file = "README.md", content-type = "text/markdown"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: System :: Networking :: Firewalls",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

requires-python = ">=3.10"
dependencies = [
    "packaging>=25.1",
    "requests>=2.32.4",
    "retry>=0.9.2",
    "simplejson>=3.17.2",
    "urllib3>=2.6.0"
]

[project.urls]
Repository = "https://github.com/kaisero/fireREST"
"Bug Tracker" = "https://github.com/kaisero/fireREST/issues"
Changelog = "https://github.com/kaisero/fireREST/blob/master/CHANGELOG.md"

[dependency-groups]
dev = [
    "pre-commit>=4",
    "pytest>=8",
    "pytest-cov>=6",
    "mypy>=1",
    "types-retry",
    "types-simplejson",
    "jinja2>=3.1.6",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mkdocstrings[python]>=0.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = ['.venv', '.git', 'docs']
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
addopts = "--verbose"
filterwarnings = "ignore::urllib3.exceptions.InsecureRequestWarning"
